cambios gallery y simetria products

--- a/about/about.html
+++ b/about/about.html
@@ -52,80 +52,93 @@
         </nav>
     </header>
     <main>
-        <h2>acerca de nosotros</h2>
+        <h2>Acerca de nosotros</h2>
         <div>
-            <section class="galeria">
-                <div class="animate__animated animate__slideInLeft">
+            <section>
+                <div class="animate__animated animate__slideInRight">
                     <article class="textos">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, maxime. Illo velit vel placeat?
-                        Perspiciatis fugit placeat quis repellendus delectus doloribus velit, voluptas amet obcaecati
-                        repellat,
-                        eius sed minima quam!Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, maxime.
-                        Illo
-                        velit vel placeat?
-                        Perspiciatis fugit placeat quis repellendus delectus doloribus velit, voluptas amet obcaecati
-                        repellat,
-                        eius sed minima quam!Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, maxime.
-                        Illo
-                        velit vel placeat?
-                        Perspiciatis fugit placeat quis repellendus delectus doloribus velit, voluptas amet obcaecati
-                        repellat,
-                    </article>
-                </div>
-                <div class="animate__animated animate__fadeInDown">
-                    <article class="textos">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, maxime. Illo velit vel placeat?
-                        Perspiciatis fugit placeat quis repellendus delectus doloribus velit, voluptas amet obcaecati
-                        repellat,
-                        eius sed minima quam!Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, maxime.
-                        Illo
-                        velit vel placeat?
-                        Perspiciatis fugit placeat quis repellendus delectus doloribus velit, voluptas amet obcaecati
-                        repellat,
-                        eius sed minima quam!Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, maxime.
-                        Illo
-                        velit vel placeat?
-                        Perspiciatis fugit placeat quis repellendus delectus doloribus velit, voluptas amet obcaecati
-                        repellat,
+                        En mi empresa buscamos destacar por nuestro conocimiento e intentamos establecernos como la
+                        opción
+                        ideal para sus compras de tecnología. Todos nuestros vendedores se encuentran altamente
+                        capacitados para asesorarlo y ofrecerle exactamente lo que necesita.
+                        esperamos poder resolver todas sus dudas respecto al hardware que usted este buscando para
+                        cualquier actividad que realice
                     </article>
                 </div>
                 <div class="animate__animated animate__slideInRight">
                     <article class="textos">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, maxime. Illo velit vel placeat?
-                        Perspiciatis fugit placeat quis repellendus delectus doloribus velit, voluptas amet obcaecati
-                        repellat,
-                        eius sed minima quam!Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, maxime.
-                        Illo
-                        velit vel placeat?
-                        Perspiciatis fugit placeat quis repellendus delectus doloribus velit, voluptas amet obcaecati
-                        repellat,
-                        eius sed minima quam!Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, maxime.
-                        Illo
-                        velit vel placeat?
-                        Perspiciatis fugit placeat quis repellendus delectus doloribus velit, voluptas amet obcaecati
-                        repellat,
+                        Nuestra Visión?
+                        Convertirnos en una empresa líder en el mercado de la tecnología,
+                        ofreciendo a nuestros clientes la mejor calidad de atención al precio más conveniente.
                     </article>
                 </div>
             </section>
-
-            <h2>FAQ</h2>
-            <div class="animate__animated animate__fadeInUp">
+            <h2>FAQ</h2> 
+            <div class="row justify-content-center">
+            <div class="col-xl-6 col-lg-12 col-md col-sm animate__animated animate__fadeInUp">
                 <section class="textos">
-                    <ul>
-                        <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam repudiandae incidunt
-                            necessitatibus quisquam. Ullam assumenda sit fugiat nam excepturi quam qui illum harum
-                            tempora
-                            ex doloremque id molestiae, maxime velit.</li>
-                        <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius quasi repellendus sed
-                            consequuntur inventore vitae necessitatibus expedita, placeat natus nam accusamus culpa
-                            adipisci
-                            nihil deserunt laudantium. Necessitatibus saepe vero veritatis.</li>
-                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum exercitationem, debitis eaque
-                            tempora aperiam reiciendis, quae molestias perferendis iste consectetur expedita blanditiis
-                            aliquid. Odio voluptatum aut explicabo adipisci! Itaque, non.</li>
-                    </ul>
-                </section>
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingOne">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    Como hago para comprar?
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>cuando alcance la parte del curso que me permita realizar un carrito de
+                                        compras</strong>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingTwo">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    Politicas de cambios
+                                </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>
+                                        Podés cambiar tu producto por otro dentro de los 10 días de efectuada la compra
+                                        siempre y cuando el mismo no esté abierto ni haya tenido uso. Si el producto a
+                                        cambiar fuera mas costoso podrás abonar la diferencia, y si fuera más económico
+                                        haremos una nota de crédito en tu favor. Pasado dicho plazo o bien una vez que
+                                        el producto haya sido abierto, únicamente podrás realizar el cambio si el mismo
+                                        no funcionara dentro del período de la garantía presentado todas las cajas y
+                                        accesorios con los que haya venido y la factura de compra.
+                                    </strong>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    Política de Arrepentimiento
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>
+                                        Podés cancelar tu compra y solicitar el reintegro de tu dinero dentro de los 10
+                                        días de haber efectuado la operación. Para eso deberás completar este
+                                        formulario: Politica de Arrepentimiento. Si el producto aún no hubiera sido
+                                        entregado el proceso de devolución demoraría unas 72hs hábiles, mientras que si
+                                        el producto ya está en viaje o fue entregado, deberemos primero volver a tenerlo
+                                        en nuestro poder para realizar la cancelación. Al completar el formulario
+                                        indicando nos comunicaremos informando pasos a seguir.</strong>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
             </div>
+        </div>
     </main>
     <footer class="text-center text-lg-start text-white" style="background-color: #929fba">
         <div class="container p-4 pb-0">
