--- a/contact/contact.html
+++ b/contact/contact.html
@@ -54,25 +54,21 @@
     <main>
         <div class="contactos animate__animated animate__bounceIn">
             <h1>FORMULARIO DE CONTACTO</h1>
-            <form class="boton_contacto" action="">
+            <form action="">
                 <div class="row justify-content-center">
-                    <section class="col-4">
+                    <section class="col-xl-6 col-lg-8 col-md-6 col-sm-6">
                         <div class="input-group mb-3">
-                            <span class="input-group-text" id="basic-addon1">nombre</span>
                             <input type="text" class="form-control" placeholder="Nombre" aria-label="nombre
                 aria-describedby=" basic-addon1="" required>
                         </div>
                         <div class="input-group mb-3">
-                            <span class="input-group-text">apellido</span>
                             <input type="text" class="form-control" placeholder="Apellido" aria-label="apellido"
                                 required>
                         </div>
                         <div class="input-group mb-3">
-                            <span class="input-group-text">mail</span>
                             <input type="mail" class="form-control" placeholder="mail" aria-label="mail" required>
                         </div>
                         <div class="input-group">
-                            <span class="input-group-text">asunto</span>
                             <textarea class="form-control" aria-label="With textarea" required></textarea>
                         </div>
                         <div class="boton_contacto">
