--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -52,40 +52,101 @@
         </nav>
     </header>
     <main>
-        <div>
-            <h2>imagenes de galeria</h2>
-            <section class="galeria">
-                <article class="zoom">
-                    <img src="../Img/Galeria/test.jpg" alt="" width="500px" height="500px">
-                </article>
-                <article class="zoom">
-                    <img src="../Img/Galeria/PC1.jpg" alt="" width="500px" height="500px">
-                </article>
-                <article class="zoom">
-                    <img src="../Img/Galeria/R.jpg" alt="" width="500px" height="500px">
-                </article>
-            </section>
-            <h2>videos de galeria</h2>
+        <section class="justify-content-center flex-wrap d-flex align-items-center">
+            <div class="galeria_imagenes">
+                <div class="row">
+                    <div class="col-4 col-sm-1">
+                        <div class="card" style="width: 18rem;">
+                            <img src="../Img/Galeria/PC3.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title"><strong>PC3</strong></h5>
+                                <p class="text-center card-text">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="galeria_imagenes">
+                <div class="row">
+                    <div class="col-4 col-sm-1">
+                        <div class="card" style="width: 18rem;">
+                            <img src="../Img/Galeria/PC4.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">PC2</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="galeria_imagenes">
+                <div class="row">
+                    <div class="col-4 col-sm-1">
+                        <div class="card" style="width: 18rem;">
+                            <img src="../Img/Galeria/PC5.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title"><strong>PC1</strong></h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <h2>videos de galeria</h2>
         </div>
         <div>
-            <section class="galeria">
-                <article class="zoom">
-                    <iframe width="500px" height="500px" src="https://www.youtube.com/embed/OpE21cQipLY"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+            <section class="justify-content-center flex-wrap d-flex align-items-center">
+                <article class="">
+                    <div class="galeria_imagenes">
+                        <div class="row">
+                            <div class="col-4 col-sm-1">
+                                <div class="card" style="width: 18rem;">
+                                    <iframe width="280" height="195" src="https://www.youtube.com/embed/0RF09-xH_48"
+                                        title="Metal: Hellsinger - Gameplay Music video | PS5, PS4" frameborder="0"
+                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                        allowfullscreen></iframe>
+                                    <div class="card-body">
+                                        <h5 class="card-title"><strong>VID3</strong></h5>
+                                        <p class="text-center card-text">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </article>
-                <article class="zoom">
-                    <iframe width="500px" height="500px" src="https://www.youtube.com/embed/BMJjq3qG0vY"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                <article>
+                    <div class="galeria_imagenes">
+                        <div class="row">
+                            <div class="col-4 col-sm-1">
+                                <div class="card" style="width: 18rem;">
+                                    <iframe width="280" height="195" src="https://www.youtube.com/embed/u84hRUQlaio"
+                                        title="Stray - Teaser Trailer | PS5" frameborder="0"
+                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                        allowfullscreen></iframe>
+                                    <div class="card-body">
+                                        <h5 class="card-title"><strong>VID2</strong></h5>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </article>
-                <article class="zoom">
-                    <iframe width="500px" height="500px" src="https://www.youtube.com/embed/KGMABnrgwRU"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                <article>
+                    <div class="galeria_imagenes">
+                        <div class="row">
+                            <div class="col-4 col-sm-1">
+                                <div class="card" style="width: 18em;">
+                                    <iframe width="280" height="195" src="https://www.youtube.com/embed/1E051WtpyWg"
+                                        title="Marvel's Spider-Man Remastered - PC Features Trailer I PC Games"
+                                        frameborder="0"
+                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                        allowfullscreen></iframe>
+                                    <div class="card-body">
+                                        <h5 class="card-title"><strong>VID1</strong></h5>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </article>
             </section>
         </div>
