--- a/product/product.html
+++ b/product/product.html
@@ -56,55 +56,43 @@
             <h2>Lista de productos</h2>
             <marquee behavior="scroll" direction="left">*aqui puede elegir nuestros productos*</marquee>
             <div>
-                <a class="btn btn-primary productos__menu" href="#!">Motherboards</a>
+                <a class="btn btn-primary productos__menu" id="Motherboards" href="">Motherboards</a>
             </div>
             <section class="justify-content-center flex-wrap d-flex align-items-center">
-                <div class="">
+                <div class="galeria_imagenes">
                     <div class="row">
                         <div class="col-4 col-sm-1">
                             <div class="card" style="width: 18rem;">
                                 <img src="../Img/Motherboards/imagen.png" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="text-center card-text">Some quick example text to build on the card title
-                                        and make up
-                                        the
-                                        bulk
-                                        of the card's content.</p>
-                                    <a href="#" class="btn btn-primary productos__menu">Go somewhere</a>
+                                    <h5 class="card-title"><strong>GIGABYTE B560 AORUS AX</strong></h5>
+                                    <a href="#" class="btn btn-primary productos__menu">COMPRAR</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="">
+                <div class="galeria_imagenes">
                     <div class="row">
                         <div class="col-4 col-sm-1">
                             <div class="card" style="width: 18rem;">
                                 <img src="../Img/Motherboards/INTEL MOTHER.png" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up
-                                        the bulk
-                                        of the card's content.</p>
-                                    <a href="#" class="btn btn-primary productos__menu">Go somewhere</a>
+                                    <h5 class="card-title"><STROng>Gigabyte B560 AORUS PRO AX</STROng></h5>
+                                    <a href="#" class="btn btn-primary productos__menu">COMPRAR</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="">
+                <div class="galeria_imagenes">
                     <div class="row">
                         <div class="col-4 col-sm-1">
                             <div class="card" style="width: 18rem;">
                                 <img src="../Img/Motherboards/AMD MOTHER.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up
-                                        the
-                                        bulk
-                                        of the card's content.</p>
-                                    <a href="#" class="btn btn-primary productos__menu">Go somewhere</a>
+                                    <h5 class="card-title"><STRong>GIGABYTE B660M AORUS PRO</STRong></h5>
+                                    <a href="#" class="btn btn-primary productos__menu">COMPRAR</a>
                                 </div>
                             </div>
                         </div>
@@ -116,55 +104,47 @@
     </div>
     <div>
         <div>
-            <a class="btn btn-primary productos__menu" href="#!">Placas de video</a>
+            <a class="btn btn-primary productos__menu" id="GPU" href="#!">Placas de video</a>
         </div>
         <section class="justify-content-center flex-wrap d-flex align-items-center">
-            <div class="">
+
+            <div class="galeria_imagenes">
                 <div class="row">
                     <div class="col-4 col-sm-1">
                         <div class="card" style="width: 18rem;">
                             <img src="../Img/placas de video/RTX3060.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="text-center card-text">Some quick example text to build on the card title
-                                    and make up
-                                    the
-                                    bulk
-                                    of the card's content.</p>
-                                <a href="#" class="btn btn-primary productos__menu">Go somewhere</a>
+                                <h5 class="card-title"><strong>PLACA DE VIDEO NVIDIA RTX 3060TI Zotac</strong></h5>
+                                <p class="text-center card-text">
+                                    <a href="#" class="btn btn-primary productos__menu">Comprar</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="">
+            <div class="galeria_imagenes">
                 <div class="row">
                     <div class="col-4 col-sm-1">
-                        <div class="card" style="width: 17rem;">
+                        <div class="card" style="width: 18rem;">
                             <img src="../Img/placas de video/RX6600XT.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up
-                                    the bulk
-                                    of the card's content.</p>
-                                <a href="#" class="btn btn-primary productos__menu">Go somewhere</a>
+                                <h5 class="card-title"><strong>PLACA DE VIDEO RADEON RX6600XT ASUS ROG</strong>
+                                </h5>
+                                <a href="#" class="btn btn-primary productos__menu">Comprar</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="">
+            <div class="galeria_imagenes">
                 <div class="row">
                     <div class="col-4 col-sm-1">
                         <div class="card" style="width: 18rem;">
                             <img src="../Img/placas de video/RX570.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up
-                                    the
-                                    bulk
-                                    of the card's content.</p>
-                                <a href="#" class="btn btn-primary productos__menu">Go somewhere</a>
+                                <h5 class="card-title"><strong>PLACA DE VIDEO AMD RADEON RX570 Asrock Phantom
+                                        Gaming</strong></h5>
+                                <a href="#" class="btn btn-primary productos__menu">Comprar</a>
                             </div>
                         </div>
                     </div>
@@ -174,56 +154,45 @@
     </div>
     <div>
         <div>
-            <a class="btn btn-primary productos__menu" href="#!">Perifericos</a>
+            <a class="btn btn-primary productos__menu" id="Perifericos" href="#!">Perifericos</a>
         </div>
         <section class="justify-content-center flex-wrap d-flex align-items-center">
-            <div class="">
+            <div class="galeria_imagenes">
                 <div class="row">
                     <div class="col-4 col-sm-1">
                         <div class="card" style="width: 18rem;">
                             <img src="../Img/perifericos/teclados/vata pro isometrica.png" class="card-img-top"
                                 alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="text-center card-text">Some quick example text to build on the card title
-                                    and make up
-                                    the
-                                    bulk
-                                    of the card's content.</p>
-                                <a href="#" class="btn btn-primary productos__menu">Go somewhere</a>
+                                <h5 class="card-title"><strong>TECLADO MECANICO REDRAGON VATA PRO SWITCHES
+                                        BROWN</strong> </h5>
+                                <a href="#" class="btn btn-primary productos__menu">COMPRAR</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="">
+            <div class="galeria_imagenes">
                 <div class="row">
                     <div class="col-4 col-sm-1">
                         <div class="card" style="width: 18rem;">
                             <img src="../Img/perifericos/auriculares/cloud 2 lado.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up
-                                    the bulk
-                                    of the card's content.</p>
-                                <a href="#" class="btn btn-primary productos__menu">Go somewhere</a>
+                                <h5 class="card-title"><strong>AURICULARES HYPER X CLOUD 2</strong></h5>
+                                <a href="#" class="btn btn-primary productos__menu">COMPRAR</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="">
+            <div class="galeria_imagenes">
                 <div class="row">
                     <div class="col-4 col-sm-1">
                         <div class="card" style="width: 18rem;">
                             <img src="../Img/perifericos/mouse/corsair harpoon(2).jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up
-                                    the
-                                    bulk
-                                    of the card's content.</p>
-                                <a href="#" class="btn btn-primary productos__menu">Go somewhere</a>
+                                <h5 class="card-title"><strong>MOUSE GAMING CORSAIR HARPOON</strong></h5>
+                                <a href="#" class="btn btn-primary productos__menu">Comprar</a>
                             </div>
                         </div>
                     </div>
