--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <article class="textos"><h2>Realizá tu compra online y recibila en tu domicilio o retirá por nuestro local</h2></article>
             </section>
     </main>
-    <footer class="text-center text-lg-start text-white" style="background-color: #929fba">
+    <footer class="text-center text-lg-start text-white" style="background-color: #3f3686">
         <div class="container p-4 pb-0">
             <section class="">
                 <div class="row">
@@ -148,7 +148,6 @@
         </div>
     </footer>
     </div>
-    <p><a href="#ir a arriba">ir arriba</a></p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
