--- a/contact/contact.html
+++ b/contact/contact.html
@@ -79,7 +79,7 @@
             </form>
         </div>
     </main>
-    <footer class="text-center text-lg-start text-white" style="background-color: #929fba">
+    <footer class="text-center text-lg-start text-white" style="background-color: #3f3686">
         <div class="container p-4 pb-0">
             <section class="">
                 <div class="row">
