--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -52,6 +52,7 @@
         </nav>
     </header>
     <main>
+        <h2>imagenes de galeria</h2>
         <section class="justify-content-center flex-wrap d-flex align-items-center">
             <div class="galeria_imagenes">
                 <div class="row">
@@ -152,7 +153,7 @@
         </div>
         <br>
     </main>
-    <footer class="text-center text-lg-start text-white" style="background-color: #929fba">
+    <footer class="text-center text-lg-start text-white" style="background-color: #3f3686">
         <div class="container p-4 pb-0">
             <section class="">
                 <div class="row">
