--- a/product/product.html
+++ b/product/product.html
@@ -200,7 +200,7 @@
             </div>
         </section>
     </div>
-    <footer class="text-center text-lg-start text-white" style="background-color: #929fba">
+    <footer class="text-center text-lg-start text-white" style="background-color: #3f3686">
         <div class="container p-4 pb-0">
             <section class="">
                 <div class="row">
