--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body class="bodycontenedor">
     <header id="ir a arriba">
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="./index.html">*EMPRESA*</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -31,16 +31,16 @@
                             <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./gallery/gallery.html">gallery</a>
+                            <a class="nav-link" href="./views/gallery.html">gallery</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./product/product.html">productos</a>
+                            <a class="nav-link" href="./views/product.html">productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./contact/contact.html">Contacto</a>
+                            <a class="nav-link" href="./views/contact.html">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./about/about.html">sobre nosotros</a>
+                            <a class="nav-link" href="./views/about.html">sobre nosotros</a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
@@ -61,6 +61,7 @@
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
             </section>
+        </div>
         </div>
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
@@ -87,7 +88,9 @@
         </div>
         <div>
             <section>
-                <article class="textos"><h2>Realizá tu compra online y recibila en tu domicilio o retirá por nuestro local</h2></article>
+                <article class="textos">
+                    <h2>Realizá tu compra online y recibila en tu domicilio o retirá por nuestro local</h2>
+                </article>
             </section>
     </main>
     <footer class="text-center text-lg-start text-white" style="background-color: #3f3686">
@@ -95,12 +98,9 @@
             <section class="">
                 <div class="row">
                     <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-                        <h6 class="text-uppercase mb-4 font-weight-bold">
-                            *EMPRESA*
-                        </h6>
                         <p>
                             <a class="btn btn-primary btn-floating m-1" style="background-color: #333333"
-                                href="./index.html" role="button"><i class="bi bi-motherboard"></i></a>
+                                href="./index.html" role="button"><i class="bi bi-motherboard">*EMPRESA*</i></a>
                         </p>
                     </div>
                     <hr class="w-100 clearfix d-md-none" />
@@ -109,23 +109,23 @@
                             <a class="text-white" href="./index.html">Home</a>
                         </p>
                         <p>
-                            <a class="text-white" href="./product/product.html">Productos</a>
+                            <a class="text-white" href="./views/product.html">Productos</a>
                         </p>
                         <p>
-                            <a class="text-white" href="./contact/contact.html">Contacto</a>
+                            <a class="text-white" href="./views/contact.html">Contacto</a>
                         </p>
                     </div>
                     <hr class="w-100 clearfix d-md-none" />
                     <hr class="w-100 clearfix d-md-none" />
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
                         <p>
-                            <a class="text-white" href="./gallery/gallery.html">galeria</a>
+                            <a class="text-white" href="./views/gallery.html">galeria</a>
                         </p>
                         <p>
-                            <a class="text-white" href="./about/about.html">about</a>
+                            <a class="text-white" href="./views/about.html">about</a>
                         </p>
                         <p>
-                            <a class="text-white" href="#!">boton arrepentimiento</a>
+                            <a class="text-danger"  href="#!">boton arrepentimiento</a>
                         </p>
                     </div>
                     <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
