--- a/index.html
+++ b/index.html
@@ -16,10 +16,15 @@
 </head>
 
 <body class="bodycontenedor">
-    <header id="ir a arriba">
+    <!-- header inicio -->
+    <header>
         <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="./index.html">*EMPRESA*</a>
+                <a class="navbar-brand" href="#">
+                    <img src="./media/3.png" alt="" width="30" height="24"
+                        class="d-inline-block align-text-top">
+                    SERGIO TAZA
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -50,21 +55,21 @@
                 </div>
             </div>
         </nav>
+        <!-- header final -->
     </header>
+
+    <!-- index page -->
     <main>
-        <div class="video-container">
-            <section class="videos">
-                <article>
-                    <iframe width="560" height="315"
-                        src="https://www.youtube.com/embed/sRE5iQCdRvE?autoplay=1&mute=1&controls=0"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-            </section>
-        </div>
-        </div>
+        <section class="body__text">
+            <!-- agregar estilo -->
+            <h1><strong>Bienvenido</strong></h1>
+            <h2>Realiz&aacute; tu compra online y recibila en tu domicilio o retirá por nuestro local</h2>
+            <p>haga click en el boton para continuar</p>
+            <a class="btn" href="./views/product.html">comprar</a>
+            </div>
+        </section>
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
+            <div class="carousel-inner mt-3">
                 <div class="carousel-item active">
                     <img src="./Img/Banners/MNT-27GN950-Hero-Banner-thin-D.jpg" class="d-block w-100" alt="...">
                 </div>
@@ -86,13 +91,10 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-        <div>
-            <section>
-                <article class="textos">
-                    <h2>Realizá tu compra online y recibila en tu domicilio o retirá por nuestro local</h2>
-                </article>
-            </section>
     </main>
+    <!-- index final -->
+
+    <!-- footer -->
     <footer class="text-center text-lg-start text-white" style="background-color: #3f3686">
         <div class="container p-4 pb-0">
             <section class="">
@@ -125,7 +127,7 @@
                             <a class="text-white" href="./views/about.html">about</a>
                         </p>
                         <p>
-                            <a class="text-danger"  href="#!">boton arrepentimiento</a>
+                            <a class="text-danger" href="#!">boton arrepentimiento</a>
                         </p>
                     </div>
                     <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
@@ -147,8 +149,7 @@
             </section>
         </div>
     </footer>
-    </div>
-    </footer>
+    <!-- footer final -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
