--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                            <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./views/gallery.html">gallery</a>
+                            <a class="nav-link" href="./views/gallery.html">Galeria</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./views/product.html">productos</a>
+                            <a class="nav-link" href="./views/product.html">Productos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./views/contact.html">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./views/about.html">sobre nosotros</a>
+                            <a class="nav-link" href="./views/about.html">Sobre Nosotros</a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
