neon y partial about

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
         <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="./index.html">
-                    <img src="./media/3.png" alt="" width="30" height="24"
-                        class="d-inline-block align-text-top">
+                    <img src="./media/3.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
                     SERGIO TAZA
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -62,11 +61,13 @@
     <main>
         <section class="body__text">
             <!-- agregar estilo -->
-            <h1><strong>Bienvenido</strong></h1>
-            <h2>Realiz&aacute; tu compra online y recibila en tu domicilio o retirá por nuestro local</h2>
+            <div class="neon">
+                <h1><strong>Bienvenido</strong></h1>
+                <h2>Realiz&aacute; tu compra online y recibila en tu domicilio o retirá por nuestro local</h2>
+            </div>
             <p>haga click en el boton para continuar</p>
             <a class="btn" href="./views/product.html">comprar</a>
-            </div>
+
         </section>
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner mt-3">
