cambios al neon

--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
                 <h2>Realiz&aacute; tu compra online y recibila en tu domicilio o retirá por nuestro local</h2>
             </div>
             <p>haga click en el boton para continuar</p>
-            <a class="btn" href="./views/product.html">comprar</a>
+            <div class="neon">
+                <a class="btn" href="./views/product.html">comprar</a>
+            </div>
 
         </section>
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
