--- a/index.html
+++ b/index.html
@@ -21,8 +21,15 @@
         <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="./index.html">
-                    <img src="./media/3.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
-                    SERGIO TAZA
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-motherboard-fill" viewBox="0 0 16 16">
+                        <path d="M5 7h3V4H5v3Z" />
+                        <path
+                            d="M1 2a2 2 0 0 1 2-2h11a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-2H.5a.5.5 0 0 1-.5-.5v-1A.5.5 0 0 1 .5 9H1V8H.5a.5.5 0 0 1-.5-.5v-1A.5.5 0 0 1 .5 6H1V5H.5a.5.5 0 0 1-.5-.5v-2A.5.5 0 0 1 .5 2H1Zm11 .5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7Zm2 0a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7ZM3.5 10a.5.5 0 0 0 0 1h6a.5.5 0 0 0 0-1h-6Zm0 2a.5.5 0 0 0 0 1h6a.5.5 0 0 0 0-1h-6ZM4 4h-.5a.5.5 0 0 0 0 1H4v1h-.5a.5.5 0 0 0 0 1H4a1 1 0 0 0 1 1v.5a.5.5 0 0 0 1 0V8h1v.5a.5.5 0 0 0 1 0V8a1 1 0 0 0 1-1h.5a.5.5 0 0 0 0-1H9V5h.5a.5.5 0 0 0 0-1H9a1 1 0 0 0-1-1v-.5a.5.5 0 0 0-1 0V3H6v-.5a.5.5 0 0 0-1 0V3a1 1 0 0 0-1 1Zm7 7.5v1a.5.5 0 0 0 .5.5h2a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-2a.5.5 0 0 0-.5.5Z" />
+                    </svg>
+                    <P>
+                        PCWorld
+                    </P>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -98,14 +105,14 @@
     <!-- index final -->
 
     <!-- footer -->
-    <footer class="text-center text-lg-start text-white" style="background-color: #3f3686">
+    <footer class="text-center text-lg-start text-white">
         <div class="container p-4 pb-0">
             <section class="">
                 <div class="row">
                     <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                         <p>
                             <a class="btn btn-primary btn-floating m-1" style="background-color: #333333"
-                                href="./index.html" role="button"><i class="bi bi-motherboard">*EMPRESA*</i></a>
+                                href="./index.html" role="button"><i class="bi bi-motherboard">PCWorld</i></a>
                         </p>
                     </div>
                     <hr class="w-100 clearfix d-md-none" />
